# financial-documents-classification

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/financial_document_classification/: __init__.py  events.py  models.py  workflow.py
